--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: the works of matthew hunter
 email: mhunter52@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This site is the personal research portfolio for Matthew Hunter, Digital Scholarship Librarian at Florida State University and PhD student in medieval English agricultural economics.
-baseurl: "/mhunter52" # the subpath of your site, e.g. /blog
+baseurl: "/matthewehunter" # the subpath of your site, e.g. /blog
 url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bigredmeh
 github_username:  mhunter52
