--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ twitter_username: bigredmeh
 github_username:  mhunter52
 
 # Build settings
-remote_theme: jekyll-theme-cayman
+theme: minima
+# remote_theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
