added header_pages section to yml file

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,10 @@ theme: minima
 # remote_theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
+header_pages:
+  - home.md
+  - about.md
+  - documentation.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
