--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ theme: minima
 plugins:
   - jekyll-feed
 header_pages:
-  - home.md
-  - about.md
+  - home.markdown
+  - about.markdown
   - documentation.md
 
 # Exclude from processing.
