trying menu again with just top-level

--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,9 @@ theme: minima
 plugins:
   - jekyll-feed
 
-# menu:
-#  - label: 'Home'
-#    link: '/home/'
+ menu:
+  - label: 'Home'
+    link: '/home/'
 #  - label: 'About'
 #    sub:
 #      - label: 'About this project'
